concord_macros/tests/dsl/fail/fail_generated_local_transport_in_policy_expr.stderr
error: generated implementation local `transport` is not part of the public DSL expression scope
  --> tests/dsl/fail/fail_generated_local_transport_in_policy_expr.rs:11:23
   |
11 |     header "X-Leak" = transport.send()
   |                       ^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_generated_local_transport_in_policy_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
